--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "陈阿娇"
-  avatar           : "profile_caj.png"
+  avatar           : "profile_caj4.jpg"
   bio              : "Your biography for the left-hand sidebar"
   location         : "China"
   employer         : 
