--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "陈阿娇"
+  name             : "Chen ajiao"
   avatar           : "profile_caj4.jpg"
   bio              : "Your biography for the left-hand sidebar"
   location         : "China"
